sfSandBoxCode/force-app/main/default/objects/Toilet_Campaign__c/Toilet_Campaign__c.object-meta.xml
<CustomObject>
    <label>Toilet Campaign</label>
    <nameField>
        <label>Toilet Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Toilet Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>