sfSandBoxCode/force-app/main/default/objects/Toilet_Campaign__c/fields/Cost_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Cost_Attendee__c</fullName>
    <formula>Actual_Cost__c / Attendance__c</formula>
    <label>Cost/Attendee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>