sfSandBoxCode/force-app/main/default/objects/Toilet_Campaign__c/fields/Cost_Lead__c.field-meta.xml
<CustomField>
    <fullName>Cost_Lead__c</fullName>
    <formula>Actual_Cost__c / Sales_Leads__c</formula>
    <label>Cost/Lead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>