sfSandBoxCode/force-app/main/default/objects/Toilet_Campaign__c/fields/Cost_New_User__c.field-meta.xml
<CustomField>
    <fullName>Cost_New_User__c</fullName>
    <formula>Actual_Cost__c / New_Users__c</formula>
    <label>Cost/New User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>