sfSandBoxCode/force-app/main/default/objects/Toilet_Campaign__c/fields/Cost_Reach__c.field-meta.xml
<CustomField>
    <fullName>Cost_Reach__c</fullName>
    <formula>Actual_Cost__c / Reach__c</formula>
    <label>Cost/Reach</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>