sfSandBoxCode/force-app/main/default/objects/Toilet_Campaign__c/fields/Event_Range__c.field-meta.xml
<CustomField>
    <fullName>Event_Range__c</fullName>
    <label>Event Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Area-Wide</fullName>
            </value>
            <value>
                <fullName>Operator Specific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>