sfSandBoxCode/force-app/main/default/objects/Toilet_Campaign__c/fields/Event_Tool__c.field-meta.xml
<CustomField>
    <fullName>Event_Tool__c</fullName>
    <label>Event Tool(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vouchers</fullName>
            </value>
            <value>
                <fullName>Posters</fullName>
            </value>
            <value>
                <fullName>Flyers</fullName>
            </value>
            <value>
                <fullName>Month Memberships</fullName>
            </value>
            <value>
                <fullName>Week Memberships</fullName>
            </value>
            <value>
                <fullName>Public Address System</fullName>
            </value>
            <value>
                <fullName>T-Shirts</fullName>
            </value>
            <value>
                <fullName>Forum</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Large Signage</fullName>
            </value>
            <value>
                <fullName>Small signage</fullName>
            </value>
            <value>
                <fullName>Keychains</fullName>
            </value>
            <value>
                <fullName>Handwashing Demonstrations</fullName>
            </value>
            <value>
                <fullName>Community Member Testimonials</fullName>
            </value>
            <value>
                <fullName>Give-Aways</fullName>
            </value>
            <value>
                <fullName>Customer Service Enhancements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>