sfSandBoxCode/force-app/main/default/objects/Toilet_Campaign__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sanitation Awareness</fullName>
            </value>
            <value>
                <fullName>Branding</fullName>
            </value>
            <value>
                <fullName>Toilet Awareness</fullName>
            </value>
            <value>
                <fullName>Product Sales - FMCGs</fullName>
            </value>
            <value>
                <fullName>Product Sales - Durables</fullName>
            </value>
            <value>
                <fullName>Usage Promotion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>