sfSandBoxCode/force-app/main/default/objects/Toilet_Campaign__c/fields/Location_Look_Up__c.field-meta.xml
<CustomField>
    <fullName>Location_Look_Up__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Toilet Campaigns</relationshipLabel>
    <relationshipName>Toilet_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>