sfSandBoxCode/force-app/main/default/objects/Toilet_Campaign__c/fields/New_Users__c.field-meta.xml
<CustomField>
    <fullName>New_Users__c</fullName>
    <label>New Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>