sfSandBoxCode/force-app/main/default/objects/Toilet_Campaign__c/fields/Parent_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Parent_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Campaign</label>
    <referenceTo>Toilet_Campaign__c</referenceTo>
    <relationshipLabel>Child Campaigns</relationshipLabel>
    <relationshipName>Toilet_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>