sfSandBoxCode/force-app/main/default/objects/Toilet_Campaign__c/fields/Sales_Leads__c.field-meta.xml
<CustomField>
    <fullName>Sales_Leads__c</fullName>
    <inlineHelpText>Please enter the sales leads generated from this campaign/event.</inlineHelpText>
    <label>Sales Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>