sfSandBoxCode/force-app/main/default/objects/Toilet_Campaign__c/fields/Sub_Area_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Sub_Area_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub-Area</label>
    <referenceTo>Sub_Area__c</referenceTo>
    <relationshipLabel>Toilet Campaigns</relationshipLabel>
    <relationshipName>Toilet_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>