sfSandBoxCode/force-app/main/default/objects/Toilet_Campaign__c/fields/Toilet_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Toilet_Campaign_ID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Toilet Campaign ID</label>
    <type>Text</type>
</CustomField>