sfSandBoxCode/force-app/main/default/objects/Toilet_Campaign__c/fields/Total_Child_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Total_Child_Attendees__c</fullName>
    <label>Total Child Attendees</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>