sfSandBoxCode/force-app/main/default/objects/Toilet_Campaign__c/listViews/Toilet_Campaigns_and_Leads.listView-meta.xml
<ListView>
    <fullName>Toilet_Campaigns_and_Leads</fullName>
    <columns>NAME</columns>
    <columns>Sales_Leads__c</columns>
    <columns>New_Users__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Leads__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Toilet Campaigns and Leads</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>Branding_Assistant</roleAndSubordinates>
        <roleAndSubordinates>Branding_Associate</roleAndSubordinates>
        <roleAndSubordinates>Marketing_Assistant</roleAndSubordinates>
        <roleAndSubordinates>Marketing_Manager</roleAndSubordinates>
    </sharedTo>
</ListView>